# webhook-manager

./: LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  docker-compose.example.yml  install.sh  nginx-example.conf  pyproject.toml  requirements.txt  setup.py  tunnel_cli.py  tunnel_nginx.py  webhook_server.py
webhook_tunnel/: __init__.py  cli.py  manager.py  proxy.py  tui.py  webhook_server.py
