[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webhook-tunnel"
version = "1.0.0"
description = "🚇 Expose local ports with custom DNS for webhook testing - K9s-style TUI interface"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["webhook", "tunnel", "ngrok", "localhost", "development", "testing", "port-forwarding", "dns", "tui", "k9s"]
authors = [
    {name = "Webhook Tunnel Contributors", email = "contact@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    "click>=8.1.0",
    "textual>=0.47.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
webhook-server = [
    "flask>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/webhook-tunnel"
Documentation = "https://github.com/yourusername/webhook-tunnel#readme"
Repository = "https://github.com/yourusername/webhook-tunnel"
"Bug Tracker" = "https://github.com/yourusername/webhook-tunnel/issues"

[project.scripts]
tunnel = "webhook_tunnel.cli:main"
tunnel-tui = "webhook_tunnel.tui:main"
tunnel-server = "webhook_tunnel.webhook_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["webhook_tunnel*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
